src/objects/Task_Assignment__c.object
<CustomObject>
    <description>Links a Task to a Project</description>
    <fields>
        <fullName>project_id__c</fullName>
        <description>Lookup to Project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Task Assignments</relationshipLabel>
        <relationshipName>Task_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>task_assignment_id__c</fullName>
        <description>Harvest Task Assignment ID</description>
        <externalId>true</externalId>
        <label>Task Assignment ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>task_id__c</fullName>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Task Assignments</relationshipLabel>
        <relationshipName>Task_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Task Assignment</label>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Task Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>